MagCloud: fixes (empty list of saved magazines, message alignment)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@13211 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/MagCloud/css/MagCloud.css
+++ b/extensions/wikia/MagCloud/css/MagCloud.css
@@ -142,6 +142,10 @@
 	overflow: auto;
 	padding-top: 10px;
 }
+#MagCloudSavedMagazinesListEmpty {
+	line-height: 1.5em;
+	margin: 80px 35px;
+}
 
 #MagCloudSavedMagazinesList input {
 	float: left;
